implemented Club invitation logic
